--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,7 @@ jobs:
            CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
            JACOCO_SOURCE_PATH: ${{ github.workspace }}/app/src/main/java
         with:
+           debug: true
            coverageCommand: make report
            workingDirectory: app
            coverageLocations: ${{ github.workspace }}/app/build/reports/jacoco/test/jacocoTestReport.xml:jacoco
