--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,8 @@ jobs:
       - uses: gradle/actions/setup-gradle@v4
         with:
           gradle-version: 8.7
-      - run: ./gradlew checkstyleMain
-      - run: ./gradlew test
+      - run: ./app/gradlew checkstyleMain
+      - run: ./app/gradlew test
         working-directory: app
       - name: Test & publish code coverage
         uses: paambaati/codeclimate-action@v9.0.0
