--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -20,8 +20,9 @@ jobs:
         with:
           arguments: build
           build-root-directory: app
-      - run: ./app/gradlew checkstyleMain
-      - run: ./app/gradlew test
+      - run: ./gradlew checkstyleMain
+      - run: ./gradlew test
+        working-directory: app
       - name: Publish code coverage
         uses: paambaati/codeclimate-action@v3.0.0
         env:
