--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -20,8 +20,8 @@ jobs:
         with:
           arguments: build
           build-root-directory: app
-      - run: ./gradlew checkstyleMain
-      - run: ./gradlew test
+      - run: ./app/gradlew checkstyleMain # Adjusted path
+      - run: ./app/gradlew test # Adjusted path
         working-directory: app
       - name: Publish code coverage
         uses: paambaati/codeclimate-action@v3.0.0
