--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -16,13 +16,12 @@ jobs:
           java-version: '21'
           distribution: 'temurin'
       - name: Build with Gradle
-        uses: gradle/gradle-build-action@v3
+        uses: gradle/gradle-build-action@v2
         with:
           arguments: build
           build-root-directory: app
-      - run: ./app/gradlew checkstyleMain # Adjusted path
-        working-directory: app
-      - run: ./app/gradlew test # Adjusted path
+      - run: ./gradlew checkstyleMain
+      - run: ./gradlew test
       - name: Publish code coverage
         uses: paambaati/codeclimate-action@v3.0.0
         env:
