Fix: workflows errors

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,7 @@ jobs:
         with:
           gradle-version: 8.7
       - run: ./gradlew checkstyleMain
+        working-directory: app
       - run: ./gradlew test
         working-directory: app
       - name: Test & publish code coverage
