--- a/app/src/test/resources/fixtures/file2.yml
+++ b/app/src/test/resources/fixtures/file2.yml
@@ -2,11 +2,7 @@ setting1: Another value
 setting2: 300
 setting3: none
 key2: value2
-numbers1:
-  - 1
-  - 2
-  - 3
-  - 4
+numbers1: [1, 2, 3, 4]
 numbers2:
   - 22
   - 33
@@ -21,12 +17,8 @@ numbers4:
   - 4
   - 5
   - 6
-chars1:
-  - a
-  - b
-  - c
+chars1: ["a", "b", "c"]
 chars2: false
-obj1:
+obj1: 
   nestedKey: value
   isNested: true
-
